# scAgent

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml  scagent.sh  test-install.Dockerfile
.github/workflows/: ci.yml
.pi/: SYSTEM.md  settings.json
.pi/skills/branching/: SKILL.md
.pi/skills/cell-annotation/: SKILL.md
.pi/skills/cell-communication/: SKILL.md
.pi/skills/clustering/: SKILL.md
.pi/skills/composition-analysis/: SKILL.md
.pi/skills/dag/: SKILL.md
.pi/skills/dimensionality-reduction/: SKILL.md
.pi/skills/doublet-detection/: SKILL.md
.pi/skills/export/: SKILL.md
.pi/skills/feature-selection/: SKILL.md
.pi/skills/immune-repertoire/: SKILL.md
.pi/skills/init/: SKILL.md
.ralph/: inspector-implementation.md  inspector-implementation.state.json
best_practices/reference/: cell-annotation.md  clustering.md  dimensionality-reduction.md  doublet-detection.md  feature-selection.md  integration.md  marker-genes.md  normalization.md  pathway-enrichment.md  pseudobulk-de.md  qc.md  trajectory.md
eval/: __init__.py  adapter.py  llm_eval_prompt.md  run_benchmark.py  run_llm_benchmark.py  run_llm_benchmark.sh
eval/handlers/: __init__.py  celltyping.py  clustering.py  de.py  hvg.py  normalization.py  qc.py  trajectory.py
eval/results/: benchmark_20260411_090336.json  benchmark_20260411_093156.json  benchmark_20260413_045402.json  benchmark_20260413_073658.json  benchmark_20260413_143942.json  benchmark_20260413_204232.json  benchmark_20260413_204428.json  benchmark_20260413_232005.json  grader_chromium_4t1_hvg_gene_sets.json  grader_chromium_4t1_normalization.json  grader_chromium_celltyping_01_4t1_compartment_fractions.json  grader_chromium_clustering_01_4t1_pericyte_adjacent_to_caf.json  grader_chromium_differential_expression_01_contractile_caf_marker_recovery.json  grader_chromium_qc_4T1_filter_cells.json  grader_chromium_trajectory_01_caf_terminal_marker_recovery.json  llm_chromium_4t1_hvg_gene_sets.json  llm_chromium_4t1_normalization.json  llm_chromium_celltyping_01_4t1_compartment_fractions.json  llm_chromium_clustering_01_4t1_pericyte_adjacent_to_caf.json  llm_chromium_differential_expression_01_contractile_caf_marker_recovery.json  llm_chromium_qc_4T1_filter_cells.json  llm_chromium_trajectory_01_caf_terminal_marker_recovery.json
hooks/: README.md  scagent_precompact_hook.sh  scagent_save_hook.sh
notes/: chunk2-plan.md  chunk3-plan.md  chunk4-plan.md  chunk5-plan.md  chunk6-plan.md  chunk7-plan.md  chunk8-plan.md  inspector-plan.md
outputs/: architecture.md  scrna-seq-chromium-research.md
scagent/: __init__.py  cli.py  context.py  dag.py  dependencies.py  export.py  inspector.py  knowledge.py  memory.py  provenance.py  state.py
scagent/tools/: __init__.py  annotation.py  clustering.py  communication.py  composition.py  doublets.py  embedding.py  enrichment.py  feature_selection.py  integration.py  knowledge_tools.py  loading.py  markers.py  multimodal.py  neighbors.py  normalize.py  pca.py  perturbation.py  pipeline.py  pseudobulk_de.py  qc.py  repertoire.py  trajectory.py
tests/: conftest.py  test_clustering_pipeline.py  test_communication.py  test_composition.py  test_context.py  test_dag.py  test_de_integration.py  test_dependencies.py  test_enrichment.py  test_export.py  test_init_integration.py  test_inspector.py  test_inspector_integration.py  test_knowledge.py  test_memory.py  test_multimodal.py  test_perturbation.py  test_provenance.py  test_provenance_integration.py  test_pseudobulk_de.py  test_qc_pipeline.py  test_repertoire.py  test_state.py  test_state_integration.py  test_temporal_dag.py  test_trajectory.py
tools/: bbknn.json  cellchat.json  cellphonedb.json  celltypist.json  cluster_profiler.json  deseq2_pseudobulk.json  diffusion_pseudotime.json  edger_pseudobulk.json  filter_cells.json  filter_genes.json  gsea.json  guide_assignment.json  harmony.json  highly_variable_genes.json  leiden.json  load_10x_h5.json  log_normalize.json  louvain.json  milor.json  monocle3.json  neighbors.json  paga.json  pca.json  perturbation_de.json  query_markers.json  scanorama.json  sccoda.json  scrublet_doublets.json  scvelo.json  scvi.json  slingshot.json  umap.json  validate_annotation.json  wilcoxon_markers.json
(+31 files in other folders)
