[project]
name = "scagent"
version = "0.1.0"
description = "Agentic single-cell RNA-seq analysis system for 10x Genomics Chromium"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "scrublet",
    "harmonypy",
    "leidenalg",
    "celltypist",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "mempalace>=3.0",
    "pydeseq2>=0.5",
    "gseapy>=1.0",
]

[tool.setuptools.packages.find]
include = ["scagent*"]

[project.optional-dependencies]
eval = [
    "latch-eval-tools>=0.1.18",
]
