[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scagent"
version = "0.1.0"
description = "Agentic single-cell RNA-seq analysis system for 10x Genomics Chromium"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = [
    "single-cell",
    "scRNA-seq",
    "10x-genomics",
    "chromium",
    "bioinformatics",
    "AI-agent",
    "scanpy",
    "cell-type-annotation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "scrublet",
    "harmonypy",
    "leidenalg",
    "celltypist",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "mempalace>=3.0",
    "pydeseq2>=0.5",
    "gseapy>=1.0",
]

[project.scripts]
scagent = "scagent.cli:main"

[project.urls]
Homepage = "https://github.com/deepmind11/scAgent"
Repository = "https://github.com/deepmind11/scAgent"
Issues = "https://github.com/deepmind11/scAgent/issues"

[project.optional-dependencies]
eval = [
    "latch-eval-tools>=0.1.18",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["scagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
