[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scagent"
version = "0.1.0"
description = "Agentic single-cell RNA-seq analysis system for 10x Genomics Chromium"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = [
    "single-cell",
    "scRNA-seq",
    "10x-genomics",
    "chromium",
    "bioinformatics",
    "AI-agent",
    "scanpy",
    "cell-type-annotation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "scrublet",
    "harmonypy",
    "leidenalg",
    "celltypist",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "mempalace>=3.0",
    "pydeseq2>=0.5",
    "gseapy>=1.0",
    # Chunk 11: paradigm-specific dependencies
    "scvelo>=0.3.2",          # RNA velocity (trajectory)
    "palantir>=1.4",          # Pseudotime + terminal states (recommended over DPT)
    "cellrank>=2.0",          # Fate mapping from velocity (recommended over stream plots)
    "pertpy>=0.9",            # Milo (DA) + scCODA (composition) — bundles both
    "liana>=1.3",             # Cell-cell communication (consensus L-R)
    "scirpy>=0.19",           # V(D)J / immune repertoire (TCR/BCR)
    "muon>=0.1.6",            # Multimodal (WNN, CITE-seq)
    "mudata>=0.3",            # MuData container for multimodal
]

[project.scripts]
scagent = "scagent.cli:main"

[project.urls]
Homepage = "https://github.com/deepmind11/scAgent"
Repository = "https://github.com/deepmind11/scAgent"
Issues = "https://github.com/deepmind11/scAgent/issues"

[project.optional-dependencies]
eval = [
    "latch-eval-tools>=0.1.18",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["scagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
